* BUG#8756 Only open link when using ctrl key
* BUG#9035 Remove checkbox for always ignoring warnings
* FEA#8271 Add support of expand attribute on group tag
* FEA#8785 Change title to Coog in the Sao browser
* FEA#7941 Add keyword attribute to button tag
* OTH#0000 Correct grunt installation steps in README
* BUG#8817 Fix width of selection input
* BUG#8840 Show scrollbar on modal
* BUG#8839 Allow link inside modal
* BUG#8810 Prevent crash on selection of m2m in form view
* BUG#8779 Use input number and toLocaleString for numeric fields
* BUG#8720 Prevent call to focus when not defined on widget
* BUG#8703 Show visible boolean extra data
* BUG#8705 Add white color for link
* BUG#8706 Remove link when line is not selected
* BUG#7226 Hide selection state
* BUG#8474 Add position and count label on one2many widget and tree view : http://hg.tryton.org/sao/rev/e19282c20d57
* BUG#7226 Refactor the editable tree process  : http://hg.tryton.org/sao/rev/cf989f7a944e/
* BUG#8474 Ensure consistent treeview rendering by using fixed table-layout : http://hg.tryton.org/sao/rev/60d4cde3ed8f

* BUG#8651 Remove right blank space
* OTH#0000 Increase line spacing of list view, add space after icon in tree views
* FEA#8643 Allow to open in new tab Many2One and Reference
* FEA#8643 Allow to edit Many2One from tree view
* BUG#7227 Fix view changes in processes

Version 4.8.2 - 2018-06-11
* Bug fixes (see mercurial logs for details)

Version 4.8.1 - 2018-05-22
* Bug fixes (see mercurial logs for details)

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Manage active field on search widget
* Add position and length on list view
* Reset record to its original state when discarding the popup window
* Add support of expand attribute on group tag
* Add the context model name in the screen context
* Add sum of records on list view
* Add shortcuts to Date and DateTime widgets
* Use limit to expand tree
* Use spellcheck and lang attributes for textbox widget