@@ -1,3 +1,4 @@
+* BUG#9468 Fix file extension missing when using excel export from tree view
 * BUG#8756 Only open link when using ctrl key
 * BUG#9035 Remove checkbox for always ignoring warnings
 * FEA#8271 Add support of expand attribute on group tag
